data/derived/comb/progs/unify/prog0836.ml.out
Characters 51-52:
  clone (x::[]) (n-1);;
         ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
